@@ -1,2 +1,12 @@
 # Jscraper
 A Java based File Scraper that allows you to move, delete, copy files to a new location based on search criteria. Alternatively you can save the file paths as a textile for future use.
+
+#Requirments
+
+JavaFX13.0.2
+JavaSDK13
+
+#Compile
+
+Compile the App.java with the folowing additional command line arguments: 
+javac --module-path "<your path>/javafx-sdk-13.0.2/lib" --add-modules javafx.controls,javafx.fxml App.java
